--- a/reset.css
+++ b/reset.css
@@ -15,28 +15,35 @@
 
   --color-background: hsla(219deg, 10%, 97%, 1);
   --color-surface: hsla(219deg, 10%, 99%, 1);
+  --color-bevel: hsla(219deg, 10%, 88%, 1);
 
   --color-hover-tint: hsla(0deg, 0%, 0%, 0.1);
 
   --color-border: hsla(219deg, 15%, 5%, 0.25);
+  --color-icon: hsla(219deg, 15%, 15%, 0.5);
 
-  --color-accent: hsla(360deg, 95%, 70%, 1);
-  --color-accent-lt: hsla(360deg, 85%, 90%, 1);
+  --color-accent: hsla(12deg, 90%, 70%, 1);
+  --color-accent-lt: hsla(12deg, 80%, 90%, 1);
+
+  --color-accent-alt: hsla(190deg, 64%, 41%, 1);
+  --color-accent-alt-lt: hsla(190deg, 50%, 75%, 1);
 
   --color-element: hsla(219deg, 5%, 99%, 1);
 
-  --shadow-1: 0 2px 2px 0 hsla(219deg, 15%, 2%, 0.12), 0 1px 5px 0 hsla(219deg, 15%, 2%, 0.1),
-    0 1px 3px -2px hsla(219deg, 15%, 2%, 0.14);
-  --shadow-2: 0 4px 5px 0 hsla(219deg, 15%, 2%, 0.1), 0 1px 10px 0 hsla(219deg, 15%, 2%, 0.08),
-    0 2px 4px -1px hsla(219deg, 15%, 2%, 0.12);
-  --shadow-3: 0 6px 8px 0 hsla(219deg, 15%, 2%, 0.1), 0 1px 14px 0 hsla(219deg, 15%, 2%, 0.08),
-    0 3px 5px -1px hsla(219deg, 15%, 2%, 0.12);
-  --shadow-4: 0 7px 28px 0 hsla(219deg, 15%, 2%, 0.25), 0 3px 8px 0 hsla(219deg, 15%, 2%, 0.2);
-  --shadow-5: 0 9px 36px 0 hsla(219deg, 15%, 2%, 0.35), 0 5px 16px 0 hsla(219deg, 15%, 2%, 0.2);
+  --shadow-1: 0 2px 2px 0 hsla(219deg, 15%, 1.75%, 0.12), 0 1px 5px 0 hsla(219deg, 15%, 1.75%, 0.1),
+    0 1px 3px -2px hsla(219deg, 15%, 1.75%, 0.14);
+  --shadow-2: 0 4px 5px 0 hsla(219deg, 15%, 1.75%, 0.1), 0 1px 10px 0 hsla(219deg, 15%, 1.75%, 0.08),
+    0 2px 4px -1px hsla(219deg, 15%, 1.75%, 0.12);
+  --shadow-3: 0 6px 8px 0 hsla(219deg, 15%, 1.75%, 0.1), 0 1px 14px 0 hsla(219deg, 15%, 1.75%, 0.08),
+    0 3px 5px -1px hsla(219deg, 15%, 1.75%, 0.12);
+  --shadow-4: 0 5px 20px 0 hsla(219deg, 15%, 1.75%, 0.25), 0 3px 8px 0 hsla(219deg, 15%, 1.75%, 0.2);
+  --shadow-5: 0 5px 22px 0 hsla(219deg, 15%, 1.75%, 0.35), 0 3px 12px 0 hsla(219deg, 15%, 1.75%, 0.2);
 
   --svg-arrow: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path fill="%23bfbfc0" d="M13.418,7.859c0.271-0.268,0.709-0.268,0.978,0c0.27,0.268,0.272,0.701,0,0.969l-3.908,3.83 c-0.27,0.268-0.707,0.268-0.979,0l-3.908-3.83c-0.27-0.267-0.27-0.701,0-0.969c0.271-0.268,0.709-0.268,0.978,0L10,11L13.418,7.859z"/></svg>');
   --svg-circle: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><circle fill="%23fb6a6a" r="12" cx="12" cy="12" /></svg>');
   --svg-checkmark: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23fb6a6a" d="M20.285 2l-11.285 11.567-5.286-5.011-3.714 3.716 9 8.728 15-15.285z"/></svg>');
+  --svg-image-fallback: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 48"><path fill="%23bfbfc0" d="M56,0H8A8,8,0,0,0,0,8V40a7.27,7.27,0,0,0,.48,2.64A8.05,8.05,0,0,0,4,46.91,8.1,8.1,0,0,0,8,48H56a8.08,8.08,0,0,0,6.72-3.65A8.18,8.18,0,0,0,64,40V8A8,8,0,0,0,56,0ZM33,42.67H8a2.35,2.35,0,0,1-.83-.16L21.65,22.75,33.52,34.61l3.76,3.76,4.27,4.3ZM58.67,40A2.68,2.68,0,0,1,56,42.67H49.12l-8-8.06,6.82-6.74,10.78,12Zm0-8.13L50,22.21a2.72,2.72,0,0,0-1.89-.88,2.53,2.53,0,0,0-1.95.78l-8.82,8.74L23.23,16.77A2.84,2.84,0,0,0,21.12,16a2.76,2.76,0,0,0-1.95,1.09L5.33,36V8A2.68,2.68,0,0,1,8,5.33H56A2.68,2.68,0,0,1,58.67,8Z"/><circle fill="%23bfbfc0" cx="37.33" cy="18.67" r="5.33"/></svg>');
+  --svg-quote: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path opacity="0.5" fill="%23ff6666" d="M11 9.275c0 5.141-3.892 10.519-10 11.725l-.984-2.126c2.215-.835 4.163-3.742 4.38-5.746-2.491-.392-4.396-2.547-4.396-5.149 0-3.182 2.584-4.979 5.199-4.979 3.015 0 5.801 2.305 5.801 6.275zm13 0c0 5.141-3.892 10.519-10 11.725l-.984-2.126c2.215-.835 4.163-3.742 4.38-5.746-2.491-.392-4.396-2.547-4.396-5.149 0-3.182 2.584-4.979 5.199-4.979 3.015 0 5.801 2.305 5.801 6.275z"/></svg>');
 }
 
 /* Document
@@ -222,9 +229,52 @@ ol {
    ========================================================================== */
 
 img {
+  display: block;
+  background-color: var(--color-bevel);
+  object-fit: cover;
   border-style: none;
+  text-indent: 0.5rem;
+  border-radius: var(--bdrs);
+  background-image: var(--svg-image-fallback);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 40%;
+}
+
+svg[role='icon'] {
+  width: 1rem;
+  height: 1rem;
+  fill: var(--color-icon, inherit);
+  user-select: none;
+  pointer-events: none;
+}
+
+img,
+object,
+svg {
+  aspect-ratio: var(--aspect, initial);
   max-width: 100%;
   height: auto;
+}
+
+figure {
+  background-color: var(--color-surface);
+  box-shadow: var(--shadow-1);
+}
+figure img,
+figure object,
+figure svg,
+figure pre,
+figure blockquote {
+  width: 100%;
+  display: block;
+  border-radius: var(--bdrs) var(--bdrs) 0 0;
+}
+figcaption {
+  padding: 0.5rem 1rem 0.5rem calc(1rem - 3px);
+  line-height: var(--base-lh);
+  border-left: 3px solid var(--color-accent);
+  border-radius: 0 0;
 }
 
 /* Grouping content
@@ -253,7 +303,7 @@ blockquote {
   padding: var(--base-lh) 2rem;
   border-left: 3px solid var(--color-accent);
   padding: calc(var(--base-lh) * 0.5) 1rem calc(var(--base-lh) * 0.5) calc(1rem - 3px);
-  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path opacity="0.5" fill="%23ff6666" d="M11 9.275c0 5.141-3.892 10.519-10 11.725l-.984-2.126c2.215-.835 4.163-3.742 4.38-5.746-2.491-.392-4.396-2.547-4.396-5.149 0-3.182 2.584-4.979 5.199-4.979 3.015 0 5.801 2.305 5.801 6.275zm13 0c0 5.141-3.892 10.519-10 11.725l-.984-2.126c2.215-.835 4.163-3.742 4.38-5.746-2.491-.392-4.396-2.547-4.396-5.149 0-3.182 2.584-4.979 5.199-4.979 3.015 0 5.801 2.305 5.801 6.275z"/></svg>');
+  background-image: var(--svg-quote);
   background-position: calc(100% - 1rem) 100%;
   background-repeat: no-repeat;
   background-size: 3.2rem;
@@ -314,6 +364,7 @@ caption {
 }
 
 table {
+  width: 100%;
   border-collapse: collapse;
 }
 
@@ -331,16 +382,24 @@ td:not(:last-child) {
   line-height: var(--base-lh);
 }
 
-tr:hover td:after {
+td {
+  position: relative;
+}
+td:after {
   content: '';
   display: block;
   height: 3px;
-  top: 3px;
-  position: relative;
-  margin-bottom: -3px;
+  position: absolute;
+  bottom: 3px;
+  width: 100%;
   margin-left: -0.5rem;
   margin-right: -0.5rem;
-  background-color: var(--color-accent-lt);
+  background-color: var(--color-accent-alt-lt);
+  opacity: 0;
+}
+
+tr:hover td:after {
+  opacity: 1;
 }
 
 /* Forms
@@ -565,6 +624,7 @@ input[type='submit'] {
   color: hsla(219deg, 10%, 99%, 1);
   background-color: var(--color-accent);
   cursor: pointer;
+  user-select: none;
 }
 
 button::-moz-focus-inner,
